# fontconfig-cmake

./: CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake
src/: CMakeLists.txt
